2009-04-22  Ryan S. Arnold  <rsa@us.ibm.com>

	[BZ #10107]
	* sysdeps/powerpc/powerpc32/power6/memcpy.S (memcpy): Replace cmpldi
	with cmplwi.
	* sysdeps/powerpc/powerpc32/power6/memset.S (memset): Likewise.

2009-06-16  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/grantpt.c: Remove file after folding changes
	into ...
	* sysdeps/unix/grantpt.c: ...here.

2009-06-15  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/grantpt.c (grantpt): Only call chown and
	chmod if it is necessary.

	[BZ #10166]
	* sysdeps/unix/sysv/linux/grantpt.c: Remove shortcut which was used
	when the slave device is in devpts or devfs.

	[BZ #10183]
	* posix/tst-cpucount.c: Don't try more than CPU_SETSIZE bits.

	[BZ #10195]
	* inet/netinet/icmp6.h (struct nd_opt_home_agent_info): Change type
	of nd_opt_home_agent_info_preference to uint16_t.
	Patch by Arnaud Ebalard <arno@natisbad.org>.

	[BZ #10207]
	* nss/getent.c: Add support for print gshadow data.

	[BZ #10203]
	* nis/nss_nis/nis-pwd.c (internal_nis_endpwent): Free all buffers,
	not just the currently used one and those which follow.
	Patch by Joe Landers <jlanders@vmware.com>.

	[BZ #10196]
	* libio/tst-fgetwc.c (do_test): Use de_DE.UTF-8 as locale name.
	* libio/Makefile: Run tst-fgetwc with necessary envvar.
	Patch by Bruce Dubbs <bdubbs@linuxfromscratch.org>.

	[BZ #10217]
	* stdlib/abort.c: Define variable __abort_msg.
	* stdlib/Versions: Export __abort_msg with GLIBC_PRIVATE version.
	* include/stdlib.h: Declare __abort_msg.
	* assert/assert-perr.c: Don't free buffer for message immediately.
	Store atomically in __abort_msg and free old buffer if necessary.
	* assert/assert.c: Likewise.
	* sysdeps/posix/libc_fatal.c: Allocate buffer for message, copy it,
	store pointer in __abort_msg, and possibly free old string.
	* sysdeps/unix/sysv/linux/libc_fatal.c: Likewise.

	* time/tzfile.c (__tzfile_read): Correct computation of tzspec_len.

	[BZ #10211]